[package]
name = "pallet-balances-rpc-runtime-api"
version = "4.0.0-dev"
authors = ["Astar Network"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "RPC runtime API for transaction payment FRAME pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
pallet-balances = { version = "4.0.0-dev", default-features = false, path = "../../../balances" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-weights = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"pallet-balances/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-weights/std",
]
